--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,13 @@
 
 .logo {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 36px;
-  margin: 8px;
+  height: 56px;
+  margin: 0;
+  padding: 44px 3px;
+  cursor: pointer;
 }
 
 .site-layout .site-layout-background {
@@ -25,12 +28,12 @@
 .logo-img{
   width: 40px;
   height: 40px;
+  margin-top: 20px;
   object-fit: cover;
   border-radius: 50%;
 }
 
 .logo-titlte{
-  margin: 0 8px;
   color: #ffffff;
   font-size: 24px;
 }
