--- a/src/pages/SignIn/mains/SignInForm/SignInForm.module.scss
+++ b/src/pages/SignIn/mains/SignInForm/SignInForm.module.scss
@@ -1,9 +1,14 @@
 .wrapper {
-  background: rgba($color: #fff, $alpha: 0.3);
-  box-shadow: 0 3px 5px 2px rgba($color: #0ebcf0, $alpha: 0.3);
-  padding: 20px 30px;
-  width: max-content;
-  text-align: center;
+  padding: 50px;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+
   .formItem {
     margin: 10px;
   }
@@ -14,4 +19,7 @@
     font-weight: 600;
     color: #666;
   }
+}
+.ant-input {
+  padding: 5px;
 }
