--- a/src/pages/SignIn/mains/SignInForm/SignInForm.module.scss
+++ b/src/pages/SignIn/mains/SignInForm/SignInForm.module.scss
@@ -2,8 +2,8 @@
   padding: 50px;
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,6 +18,11 @@
     margin: 10px 0;
     font-weight: 600;
     color: #666;
+  }
+  .avatar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 .ant-input {
