--- a/src/components/TableAddShifts/AddShifts.scss
+++ b/src/components/TableAddShifts/AddShifts.scss
@@ -7,8 +7,8 @@
     }
     .Add-Group {
       margin: 10px 0;
-      display: flex;
-      align-items: center;
+      // display: flex;
+      // align-items: center;
       p {
         margin-right: 10px;
         margin-bottom: 0;
