--- a/src/pages/Home/setting.scss
+++ b/src/pages/Home/setting.scss
@@ -2,7 +2,9 @@
   display: flex;
   justify-content: flex-end;
   margin-bottom: 15px;
-  button {
+  align-items: center;
+  .Search {
+    width: 200px;
     margin: 0 10px;
   }
 }
